--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.11"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
