--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.11"
   },
+  "engines": {
+    "node": ">=12"
+},
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
