removed facebook apiKey

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 PASSWORD="inkehnashod"
+
+module.exports = {
+    'facebookAuth' : {
+        'clientID' : '698057667407023',
+        'clientSecret': '7588aaea2262f5824afba8a10cf09402',
+        'callbackURL': 'http://localhost:8080/auth/facebook/callback'
+    }
+}
