--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "handlebars": "^4.7.6",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.11"
+    "sequelize": "^5.21.11",
+    "toastr": "^2.1.4"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
