--- a/package.json
+++ b/package.json
@@ -37,15 +37,12 @@
     "handlebars": "^4.7.6",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
-
     "sequelize": "^5.21.11",
-    "toastr": "^2.1.4"
-
+    "toastr": "^2.1.4",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
-    "passport-local": "^1.0.0",
-    "sequelize": "^5.21.11"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
