--- a/package.json
+++ b/package.json
@@ -37,12 +37,11 @@
     "handlebars": "^4.7.6",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.11",
-    "toastr": "^2.1.4",
-    "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sequelize": "^5.21.11",
+    "toastr": "^2.1.4"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -51,6 +50,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "nodemon": "^2.0.4",
     "sequelize-cli": "^5.5.1"
   }
 }
