--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "browser": true,
         "commonjs": true,
-        "es6": true
+        "es6": true,
+        "jQuery":true
     },
     "extends": "eslint:recommended",
     "globals": {
@@ -13,5 +14,6 @@
         "ecmaVersion": 2018
     },
     "rules": {
+        "no-var": "error"
     }
 }
