--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,7 @@
     "env": {
         "browser": true,
         "commonjs": true,
-        "es6": true,
-        "jQuery":true
+        "es6": true
     },
     "extends": "eslint:recommended",
     "globals": {
