--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^4.0.1",
     "bcryptjs": "^2.4.3",
     "bulma": "^0.8.2",
+    "compression": "^1.7.4",
     "connect-mysql": "^4.0.0",
     "connect-session-sequelize": "^6.1.1",
     "cookie-parser": "^1.4.5",
